# libgit2

./: meson.build  meson_options.txt  readme.txt  upstream.wrap
include/git2/sys/: meson.build
